--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 <main>
     <section class="section-portfolio">
         <div class="container">
-        <h1 class="work-list hidden">Портфолио Работ</h1>
+        <h1 class="work-list visually-hidden">Портфолио Работ</h1>
         <ul class="button-portfolio">
             <li class="btm-portfolio"> <button type="button" class="button-current">Все</button> </li>
             <li class="btm-portfolio" > <button type="button" class="button-current">Веб-сайты</button> </li>
@@ -68,7 +68,7 @@
 
         </ul>
     
-        <h2 class="work-list hidden">Примеры Работ</h2>
+        <h2 class="work-list visually-hidden">Примеры Работ</h2>
             <ul class="work-box">
             <li class="examples-box"> 
                 <a class="type-link" href=""> 
