--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 
         <div class="subscription">
     
-            <h2 class="subscription-title title">Подпишитесь на рассылку</h2>
+            <h2 class="subscription-title ">Подпишитесь на рассылку</h2>
             <form name="subscription-form">
                 <label for="email">
                     <input class="footer-input" type="email" name="email" placeholder="E-mail" />
