сделаны повторные правки

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 </label> 
                 
                 <button class="footer-submit-button" type="submit">Подписаться
-                    <svg class="icon-submit">
+                    <svg class="icon-submit-svg" >
                         <use href="./images/icons/icon-send.svg#icon-icon-send"></use>
                     </svg>
                    
