--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         <div class="subscription">
     
             <h2 class="subscription-title ">Подпишитесь на рассылку</h2>
-            <form name="subscription-form">
+            <form name="subscription-form" style="display: flex;">
                 <label for="email">
                     <input class="footer-input" type="email" name="email" placeholder="E-mail" />
                 </label> 
