--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         <div class="subscription">
     
             <h2 class="subscription-title ">Подпишитесь на рассылку</h2>
-            <form name="subscription-form" style="display: flex;">
+            <form class="subscription-form" name="subscription-form">
                 <label for="email">
                     <input class="footer-input" type="email" name="email" placeholder="E-mail" />
                 </label> 
@@ -427,7 +427,7 @@
 <div class="backdrop is-hidden " data-modal>
     <div class="modal">
         <button type="button" class="close-btn" data-modal-close>
-        <svg width="18px" height="18px">
+        <svg class="close-svg" width="18px" height="18px">
             <use href="./images/icons/symbol-close.svg#icon-close-12">
         
             </use>
